# ferrum

./: .env.example  .gitattributes  .gitignore  .prettierignore  .vercelignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  README.md  build.rs  deny.toml  package-lock.json
.cargo/: config.toml
.github/workflows/: release.yml
crates/demo/: Cargo.toml  build.rs
crates/demo/src/: config.rs  lib.rs  main.rs  scene.rs  ssh.rs  ui.rs  ws_web.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/res/floor/: floor.mtl
crates/engine/src/: camera.rs  hdr.rs  lib.rs  light.rs  main.rs  material.rs  models.rs  pipeline.rs  resources.rs  shaders.wgsl  structs.rs  texture.rs
crates/engine/src/shaders/: equirectangular.wgsl  hdr.wgsl  light.wgsl  shaders.wgsl  sky.wgsl
crates/ferrum/: Cargo.toml  build.rs
crates/ferrum-wgpu/: Cargo.toml  README.md
crates/ferrum-wgpu/examples/: basic_window.rs
crates/ferrum-wgpu/src/: lib.rs  math.rs  renderer.rs
crates/ferrum-wgpu/src/assets/: models.rs  resources.rs  store.rs
crates/ferrum-wgpu/src/config/: config.rs
crates/ferrum-wgpu/src/renderer/: camera.rs  hdr.rs
crates/ferrum-wgpu/src/scene/: light.rs  wind.rs
crates/ferrum-wgpu/src/shaders/: hdr.wgsl  light.wgsl  shaders.wgsl
crates/ferrum/res/sun/: venus.mtl
crates/ferrum/src/: assets.rs  config.rs  error.rs  hdr.rs  lib.rs  light.rs  math.rs  models.rs  renderer.rs  resources.rs  scene.rs  structs.rs  texture.rs
crates/ferrum/src/assets/: models.rs  resources.rs
crates/ferrum/src/math/: math.rs
crates/ferrum/src/renderer/: hdr.rs  material.rs  pipeline.rs  shadow.rs  texture.rs
crates/ferrum/src/scene/: light.rs  wind.rs
crates/ferrum/src/shaders/: equirectangular.wgsl  shaders.wgsl  shadow.wgsl  sky.wgsl
crates/rpi/: Cargo.toml
crates/rpi/src/: camera.rs  light.rs  main.rs  microphone.rs
crates/shared/: Cargo.toml
crates/shared/src/: structs.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
res/one/: plant.mtl
res/tree/: Rigged_Indoor_Plant_IK.fbx  Rigged_Indoor_Plant_IK.mtl
res/two/: map_284cfa7c-b321-4732-bf2f-21c3169b2e3a_densified_mesh_textured.obj.mtl
src/: camera.rs  geometry.rs  lib.rs  light.rs  light.wgsl  main.rs  models.rs  resources.rs  shaders.wgsl  structs.rs  texture.rs
www/: .env.example  .gitignore  .npmrc  .vercelignore  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
www/src/assets/icons/: AppleIcon.astro  BoxIcon.astro  DownloadIcon.astro  EmailIcon.astro  FerrumLogo.astro  GitHubIcon.astro  GlassesIcon.astro  GlobeIcon.astro  LayersIcon.astro  MonitorIcon.astro  YoutubeIcon.astro  ZapIcon.astro
www/src/components/: AboutUs.astro  AppleIcon.astro  AtomSection.astro  Contact.astro  Demo.astro  Download.astro  DownloadCard.astro  DownloadSection.astro  Features.astro  Footer.astro  GradientButton.astro  GradientEffect.astro  Header.astro  HeroSection.astro  Main.astro  Precision.astro  Requierments.astro  VirtualReality.astro
www/src/components/icons/: FerrumLogo.astro  GitHubIcon.astro  GlassesIcon.astro  LayersIcon.astro  MonitorIcon.astro
www/src/layouts/: Layout.astro
www/src/pages/: contact.astro  demo.astro  download.astro  index.astro  legal.astro  resend.ts
www/src/styles/: global.css
xtask/: Cargo.toml
xtask/src/: main.rs
