[package]
name = "ferrum"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]
# wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
wasm-opt = false

[dependencies]
windows-core = "0.61"
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"]}
web-sys = "0.3"
reqwest = "0.13.2"
web-time = "1.1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "ico"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
winres = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log= "1.0"
wgpu = {version = "28.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = {version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}


[workspace]
members = [
    ".",
    "xtask"
]