[package]
name = "ferrum"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
env_logger = "0.10"
log = "0.4"
wgpu = { version = "28.0", default-features = false, features = ["wgsl"] }
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"] }
web-time = "1.1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "ico"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "28.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
reqwest = "0.13.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.61"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
wgpu = { version = "28.0", default-features = false, features = ["wgsl", "gles"] }
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11"] }
[features]
rpi = []

[workspace]
members = [
    ".",
    "xtask"
]