[package]
name = "demo"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = {version = "0.8.4", features=["ws", "macros"]}
tokio = {version= "1.52.3", features = ["full"]}
shared = { path = "../shared" }
ferrum = { path = "../ferrum" }
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11", "wayland"] }
wgpu = { version = "28.0", default-features = false, features = ["wgsl", "vulkan", "dx12", "metal"] }
pollster = "0.3"
log = "0.4"
env_logger = "0.10"
web-time = "1.1.0"
image = { version = "0.24", default-features = false, features = ["png","jpeg","ico","hdr","openexr"] }
bincode = { version = "2", features = ["serde"] }
cgmath = "0.18.0"
tsl2591-rs = "0.1.4"

[lib]
crate-type = ["cdylib", "rlib"]
