[package]
name = "demo"
version.workspace = true
edition.workspace = true
build = "build.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
anyhow = "1.0.102"
shared = { path = "../shared" }
ferrum = { package = "ferrum-wgpu", path = "../ferrum-wgpu" }
winit = { version = "0.30", default-features = false, features = [
  "rwh_06",
  "x11",
  "wayland",
] }
wgpu = { version = "29.0", default-features = false, features = [
  "wgsl",
  "vulkan",
  "dx12",
  "metal",
] }
log = "0.4"
web-time = "1.1.0"
image = { version = "0.24", default-features = false, features = [
  "png",
  "jpeg",
  "ico",
  "hdr",
  "openexr",
] }
bincode = { version = "2", features = ["serde"] }
cgmath = "0.18.0"
tsl2591-rs = "0.1.4"
egui = "0.34"
egui-wgpu = { version = "0.34", default-features = false }
egui-winit = { version = "0.34", default-features = false, features = [
  "links",
  "wayland",
  "x11",
] }

# Dependencias solo nativas: el servidor de websockets (axum/tokio) no compila
# en wasm — en el navegador somos CLIENTE WebSocket vía web-sys (ws_web.rs).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
pollster = "0.3"
env_logger = "0.10"
dotenvy = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "Location",
  "WebSocket",
  "BinaryType",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
] }

[lib]
crate-type = ["cdylib", "rlib"]
