[package]
name = "rpi"
version.workspace = true
edition.workspace = true

[dependencies]
linux-embedded-hal = "0.4"
shared = { path = "../shared" }
tokio-tungstenite = "0.29.0"
tokio = { version = "1.52.3", features = ["full"] }
thiserror = "2.0.18"
futures-util = "0.3"
bincode = { version = "2", features = ["serde"] }
tsl2591-rs = { version = "0.1.4", features = ["serde"] }
dotenvy = "0.15.7"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
rppal = "0.22.1"
serde_json = "1.0.150"
